--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
   <description>Desc</description>
 
   <properties>
-    <java.version>24</java.version>
+    <java.version>23</java.version>
   </properties>
 
   <dependencies>
@@ -22,8 +22,8 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
-          <source>24</source>
-          <target>24</target>
+          <source>${java.version}</source>
+          <target>${java.version}</target>
         </configuration>
       </plugin>
     </plugins>
@@ -35,8 +35,8 @@
           <artifactId>maven-compiler-plugin</artifactId>
           <version>3.13.0</version>
           <configuration>
-            <source>24</source>
-            <target>24</target>
+            <source>${java.version}</source>
+            <target>${java.version}</target>
           </configuration>
         </plugin>
       </plugins>
